--- a/src/Component/NavBar/Nav.css
+++ b/src/Component/NavBar/Nav.css
@@ -1,118 +1,140 @@
-*{
-box-sizing: border-box;
-margin: 0;
-padding: 0;}
+    *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;}
 
 
 
-.nav1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 42px 25px;
-    width:100%;
-    background-color: #282c34;
-    height: 70px;
-    color:white;
-    font-weight: bold;
-    font-style: italic;
-}
-.nav1 ul{
-    list-style-type: none;
-    margin-right: 50px;
-    display: flex;
-flex-direction:row;
+    .nav1{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 42px 25px;
+        width:100%;
+        background-color: #282c34;
+        height: 70px;
+        color:white;
+        font-weight: bold;
+        font-style: italic;
+    }
+    .nav1 ul{
+        list-style-type: none;
+        margin-right: 50px;
+        display: flex;
+    flex-direction:row;
+        
+    }
+    .nav1 ul li{
+
+    padding:0 30px;
+    justify-content: space-around;
+    text-transform:uppercase
+    }
+    .nav1 ul li:hover{
+        cursor: pointer;
+        background-color: white;
+        color: #e0060c;
+        border-radius:8px ;
+    }
+
+    .Logo{
+
+        /* margin-left: 50px; */
+        font-weight:bold
+    }
+    .nav2{
+        background-color: #e0060c;
+        margin-top:0;
+        width: 100%;
+        height: 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color:white;
+        font-style: italic;
+    }
+    .nav2 ul{
+        list-style-type: none;
+        margin-right: 50px;
+        
+    }
+    .nav2 ul li{
+    display: inline-block;
+    padding:0 10px;
+    text-transform:uppercase
+
+    }
+    .nav2 div{
+    display:flex;
+    justify-content: space-around;
+    margin-left: 30px;
+    }
+    .nav2 div div{
+        margin-left:20px
     
-}
-.nav1 ul li{
+    }
+    .dash{
+        display: none;
+        margin-left: 0;
+    }
+    .nav3{
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        background-color:
+        #1C2833;
+        color:white;
+        font-weight: bold;
+        font-style: italic;
+        width: 100%;
+        position: absolute;
+        z-index: 15;
+    }
+    .nav3 div {
+        margin-bottom: 18px;
+        margin-top: 14px;
+    }
+    .nav3 div:hover{
+        cursor: pointer;
+        background-color: white;
+        color: black;
+    }
+    span{
+        margin-left: 15px;
+    }
+    .slider{
+        margin-left: 0;
+        width: 100%;
+        background-size: 100%;
+        height: 400px;
+        background-position: center;
+        /* position: absolute; */
+    }
+    @media(max-width:897px){
+        .dash{
+            display: block;
+            cursor: pointer;
+            /* width:200px;
+            height:50px */
+        }
+        .nav1 ul li {
+            display: none;
+        }
+        .nav2{display: none;}
+        .Logo{
+            margin-left: -72px;
+            width: 250px;
 
-padding:0 30px;
-justify-content: space-around;
-text-transform:uppercase
-}
-.nav1 ul li:hover{
-    cursor: pointer;
-    background-color: white;
-    color: #e0060c;
-    border-radius:8px ;
-}
 
-.Logo{
-
-    /* margin-left: 50px; */
-    font-weight:bold
-}
-.nav2{
-    background-color: #e0060c;
-    margin-top:0;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color:white;
-    font-style: italic;
-}
-.nav2 ul{
-    list-style-type: none;
-    margin-right: 50px;
-    
-}
-.nav2 ul li{
-display: inline-block;
-padding:0 10px;
-text-transform:uppercase
-
-}
-.nav2 div{
-  display:flex;
-  justify-content: space-around;
-margin-left: 30px;
-}
-.nav2 div div{
-    margin-left:20px
-  
-  }
-  .dash{
-      display: none;
-  }
-  .nav3{
-      display: flex;
-      flex-direction: column;
-      /* align-items: center; */
-      background-color:
-      #1C2833;
-       color:white;
-       font-weight: bold;
-       font-style: italic;
-       width: 100%;
-  }
-  .nav3 div {
-      margin-bottom: 18px;
-      margin-top: 14px;
-  }
-  .nav3 div:hover{
-      cursor: pointer;
-      background-color: white;
-      color: black;
-  }
-  @media(max-width:897px){
-      .dash{
-          display: block;
-          cursor: pointer;
-      }
-      .nav1 ul li {
-          display: none;
-      }
-      .nav2{display: none;}
-      .Logo{
-        margin-left: -72px;
-
-      }
-      
-  }
-  @media(min-width:897px){
-      .nav3{
-          display: none;
-      }
-  }
+        }
+        
+    }
+ 
+    @media(min-width:897px){
+        .nav3{
+            display: none;
+        }
+    }
+    /* @media(min-width:450px){
+        margin-right:-5px;
+    } */
