--- a/src/Component/HomePag/HomePage.css
+++ b/src/Component/HomePag/HomePage.css
@@ -1,35 +1,75 @@
-.Content{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-}
-.Rightdiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-.one{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 30px;
-}
-.divin_div{
-    width:600px;
-    margin-right:15px;
-}
-@media(max-width:897px){
-    .Content{
-        margin-top: 15px;
-        flex-direction: column;
-        align-items: center;
-    }
-    .one{
-       
-        flex-direction: column;
-        margin-bottom: 20px;
-    }
-    .divin_div{
-        width: 400px;
-    }
-}
+        .Content{
+            display: flex;
+            justify-content: space-around;
+            flex-direction: row;
+            margin-bottom: 13px;
+        }
+        .Rightdiv{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+        }
+        .one{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            margin-bottom: 30px;
+        }
+        .divin_div{
+            width:600px;
+            margin-right:15px;
+        }
+        .anoterCon{
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 20px;
+        }
+        .anoterCon div {
+            display: flex;
+            flex-direction: column;
+        }
+        .imagee{
+            width: 272.5px;
+            height: 272.5px;
+        }
+        p{
+            font-family: "Lato",sans-serif;
+            font-weight: 400;
+            color: #777;
+            font-size: 16px;
+            line-height: 1.625;
+            background-color: #fff;
+            font-weight: bold;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizeLegibility;    }
+            .my_h{
+                text-align: right;
+            }
+        @media(max-width:897px){
+            .Content{
+                margin-top: 15px;
+                flex-direction: column;
+                align-items: center;
+            }
+            .one{
+            
+                flex-direction: column;
+                margin-bottom: 20px;
+            }
+            .divin_div{
+                width: 400px;
+            }
+            .anoterCon{
+                flex-direction: column;
+                align-items: center;
+            }
+            .my_h{
+                text-align: center;
+            }
+            /* .imageContent{
+                width:3.7px;
+                height: 300.7px;
+                text-align: center;
+            } */
+        }
