--- a/src/Component/NavBar/Nav.css
+++ b/src/Component/NavBar/Nav.css
@@ -1,197 +1,61 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-.nav1 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 42px 25px;
+.Header {
   width: 100%;
-  background-color: white;
-  border-bottom: 1px solid black;
-  height: 70px;
-  color: white;
-  font-weight: bold;
-  font-style: italic;
-  box-shadow: -5px -5px -5px gray;
-}
-.nav1 ul {
-  list-style-type: none;
-  margin-right: 50px;
+  height: 5rem;
   display: flex;
   flex-direction: row;
-}
-.nav1 ul li {
-  padding: 0 30px;
-  justify-content: space-around;
-  text-transform: uppercase;
-}
-.nav1 ul li a {
-  text-decoration: none;
-  /* color: black; */
-  font-family: initial;
-  font-size: larger;
-}
-
-.nav1 ul li a:hover {
-  cursor: pointer;
-  background-color: white;
-  color: #e0060c;
-  border-radius: 8px;
-}
-
-.Logo {
-  font-weight: bold;
-  width: 178px;
-  margin-left: -24px;
-}
-.nav2 {
-  background-color: #fff;
-  margin-top: 0;
-  width: 100%;
-  height: 40px;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  color: black;
-  /* color: white; */
-  font-style: italic;
-  font-weight: 700;
-}
-.nav2 ul {
-  list-style-type: none;
-  margin-right: 50px;
-}
-.nav2 ul li {
-  display: inline-block;
-  padding: 0 10px;
-  text-transform: uppercase;
-}
-.nav2 div {
-  display: flex;
   justify-content: space-around;
-  margin-left: 30px;
 }
-.nav2 div div {
-  margin-left: 20px;
-}
-.dash {
-  display: none;
-  margin-left: 0;
-}
-.nav3 {
+
+.CustomeHeader {
   display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  background-color: #1c2833;
-  color: white;
-  font-weight: bold;
-  font-style: italic;
-  width: 100%;
-  position: absolute;
-  z-index: 15;
+  flex-direction: row;
+  align-items: center;
+  width: 45%;
+  justify-content: space-around;
 }
-.nav3 ul li {
-  margin-bottom: 40px;
-  padding: 15px;
-}
-
-.nav3 ul li a {
-  text-decoration: none;
-  color: white;
-}
-
-.nav3 ul li a:hover {
+.Threedotts {
+  display: none;
   cursor: pointer;
-  background-color: white;
-  color: #e0060c;
-  border-radius: 8px;
 }
-.active {
+nav {
+  width: 70%;
+  height: 4rem;
+  margin: auto;
+  margin-top: 20px;
+  background-color: #212020;
+  border-bottom-left-radius: 36.5px;
+  border-top-left-radius: 36.5px; /* background-color: var(--thm-black); */
+  display: flex;
+  justify-content: center;
+}
+.nav ul {
+  width: 93%;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+.nav ul li a {
+  text-decoration: none;
+  /* color: gray; */
   font-weight: bold;
-  width: 40px;
 }
 
 .main-nav-active {
-  /* background-color: white; */
-  border: 1px solid white;
-  border-radius: 8px;
-  padding: 0 30px;
-  color: red;
-  padding: 0 30px;
-}
-span {
-  margin-left: 15px;
-}
-.slider {
-  margin-left: 0;
-  width: 100%;
-  background-size: 100%;
-  height: 400px;
-  background-position: center;
-}
-.description {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  z-index: 5;
-  background-color: rgba(0, 0, 0, 0.6);
+  border: 2px solid white;
+  border-radius: 4px;
   color: white;
-  text-align: center;
-  line-height: 50px;
-  border-width: 0px;
-  font-weight: bold;
-
-  font-size: 40px;
-  white-space: pre-wrap;
-  width: 70%;
-  height: 150px;
-  margin-left: 180px;
-  opacity: 1;
-  font-style: italic;
 }
-.desc {
-  background-color: gainsboro;
-  color: black;
-  border-radius: 8px;
-  width: 70%;
-  box-shadow: -5px -5px 10px gray;
-  margin: auto;
-  margin-top: 10px;
-  line-height: 30px;
-  font-weight: bold;
-}
-@media (max-width: 897px) {
-  .dash {
+@media (max-width: 920px) {
+  .CustomeHeader {
+    display: none;
+  }
+  .Threedotts {
     display: block;
-    cursor: pointer;
   }
-  .nav1 ul li {
-    display: none;
-  }
-  .nav2 {
-    display: none;
-  }
-  .Logo {
-    margin-left: -7px;
-    width: 178px;
-  }
-  .description {
-    height: 300px;
-    margin-left: 70px;
-    line-height: 50px;
-
-    font-size: 30px;
-  }
-}
-
-@media (min-width: 897px) {
-  .nav3 {
+  .nav {
     display: none;
   }
 }
