--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -3,8 +3,9 @@
   width: 100%;
   position: relative;
   bottom: 0;
-  height: 30rem;
+  height: 36rem;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  padding-bottom: 75px;
 }
