--- a/src/Component/Gallery/Gallery.module.css
+++ b/src/Component/Gallery/Gallery.module.css
@@ -5,6 +5,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
+  margin-top: 40px;
   margin-bottom: 40px;
   /* height: 700px; */
 }
