--- a/src/Component/Slider/Slider.css
+++ b/src/Component/Slider/Slider.css
@@ -38,14 +38,11 @@ h2 {
   margin-left: 15px;
 }
 .links {
-  font-family: "Roboto", Arial, sans-serif;
-  font-weight: 300;
-  font-size: 15px;
+  font-weight: 400px;
   line-height: 1.6;
   color: white;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
 }
 ul {
   display: block;
@@ -60,15 +57,13 @@ ul li {
   list-style: none;
   margin: 0px 0px 32px;
   letter-spacing: 2px;
-  font-weight: bold;
+  border-bottom: 1px solid gray;
 }
 ul li a {
-  color: gray;
+  color: white;
   text-decoration: none;
   letter-spacing: 0.1em;
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 15px;
   position: relative;
   padding: 10px 10px;
   letter-spacing: 0.2em;
@@ -78,13 +73,6 @@ ul li a {
   transition: 0.3s;
 }
 
-.active {
-  /* border: 1px solid white; */
-}
-/* ul li.active a {
-  text-decoration: underline;
-  text-decoration-color: #337ab7;
-} */
 .main-nav-active {
   border: 2px solid white;
   border-radius: 4px;
