--- a/src/Component/Transf/Trans.module.css
+++ b/src/Component/Transf/Trans.module.css
@@ -5,17 +5,24 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-bottom: 10px;
   text-align: right;
   /*  */
 }
+.trans img {
+  border-bottom: 4px solid black;
+  border-radius: 15px;
+}
 .divin_div {
   background-color: gainsboro;
   border-radius: 9px;
-  border: 1px solid gray;
+  border-bottom: 4px solid black;
   margin-top: 40px;
   box-shadow: 5px 5px 5px gainsboro;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px gray;
+  margin-bottom: 40px;
 }
 .trans p {
   padding: 15px;
