--- a/src/Component/NavBar/Nav.css
+++ b/src/Component/NavBar/Nav.css
@@ -14,6 +14,7 @@
   width: 45%;
   justify-content: space-around;
 }
+
 .Threedotts {
   display: none;
   cursor: pointer;
@@ -26,7 +27,6 @@ nav {
   background-color: #212020;
   border-bottom-left-radius: 36.5px;
   border-top-left-radius: 36.5px;
-  /* background-color: var(--thm-black); */
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -40,16 +40,10 @@ nav {
   align-items: end;
 }
 .nav ul li a {
-  color: gray;
-  text-decoration: none;
-  /* letter-spacing: 0.1em; */
-  /* text-transform: uppercase; */
-  /* font-size: 13px; */
-  /* font-weight: 600; */
-  position: relative;
   padding: 10px 10px;
-  letter-spacing: 0.2em;
-  /* font-family: "Roboto", Arial, sans-serif; */
+
+  font-weight: 800;
+
   transition: 0.3s;
 }
 
